<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QGDaksha</string>
    <string name="forgot_pass_enter_mob">Forgot Pass, enter mob.</string>
    <string name="phone">Phone Number</string>
    <string name="send_verification_code">Send verification code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hey_there_w"><br>Hey, there!</br> Welcome back</string>
    <string name="login_here_">Login here with your details</string>
    <string name="title_activity_dash">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="will_send_otp_to_reset_password">We will send you an OTP to reset your password</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login Button</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname">Full Name </string>
    <string name="phone_91">Phone (+91)</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>