<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.quickghy.qgdaksha.ui.auth.AuthViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/ic_elip"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{viewmodel::help}"
                    android:text="Need help?"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/hey_there_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hey, there!" />

            <TextView
                style="@style/hey_there_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome back" />


            <TextView
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="Login here with your details" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/customET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:startIconDrawable="@drawable/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/customInputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_or_email"
                    android:text="@={viewmodel.phone}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/customPassET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/customInputTxtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={viewmodel.password}" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/btn_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/poppins_regular"
                android:onClick="@{viewmodel::goToForgotPass}"
                android:padding="@dimen/_3sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray" />

            <FrameLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp">

                <ImageButton
                    android:id="@+id/btn_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@string/login_button"
                    android:onClick="@{viewmodel::doLogin}"
                    android:src="@drawable/btn" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/btn_anim_wheel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/btn_yellow_spinner" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:text="Or" />

            <TextView
                android:id="@+id/sign_in_google"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/rectangle_3"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="2dp"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_up"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:padding="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/btn_go_to_signup"
                    style="@style/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewmodel::goToSignUp}"
                    android:paddingStart="@dimen/_3sdp"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>