<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.LoginFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.quickghy.qgdaksha.ui.auth.AuthViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/ic_elip"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:onClick="@{viewmodel::help}"
                    android:text="Need help?"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                style="@style/hey_there_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hey, there!\nWelcome back" />

            <TextView
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="Login with your Phone Number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/customET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:startIconDrawable="@drawable/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/customInputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_or_email"
                    android:text="@={viewmodel.phone}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp">

                <ImageButton
                    android:id="@+id/btn_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/login_button"
                    android:onClick="@{viewmodel::doSendOtpForlogin}"
                    android:src="@drawable/btn" />

                <ProgressBar
                    android:id="@+id/btn_anim_wheel"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:scaleType="fitCenter"
                    android:theme="@style/byttheme"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:text="OR" />

            <TextView
                android:id="@+id/sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rectangle_3"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:drawablePadding="@dimen/_6sdp"
                android:elevation="10dp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_8sdp"
                android:text="    Sign in with Google    " />

            <TextView
                android:id="@+id/sign_in_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/rectangle_3"
                android:drawable="@color/app_gray"
                android:drawableStart="@drawable/phonesolid"
                android:drawablePadding="@dimen/_6sdp"
                android:elevation="10dp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:onClick="@{viewmodel::goTologinpass}"
                android:padding="@dimen/_8sdp"
                android:text="    Sign in with Password " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/btn_go_to_signup"
                    style="@style/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewmodel::goToSignUp}"
                    android:paddingStart="@dimen/_3sdp"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>